<resources>


    // Application

    <string name="app_name" translatable="false">StudOn</string>
    <string name="app_permissions">
        &lt;i>\"Access storage\" permission:&lt;/i>&lt;br>
        Used for saving downloads on the sd-card.&lt;br>&lt;br>

        &lt;i>Grant permission later:&lt;/i>&lt;br>
        If you do not permit this now, you can do it later. Then, please open \"Settings -> Grant permission\".</string>

    <string name="app_share">Share using:</string>


    // StudOn

    <string name="subjects_color_red">Red</string>
    <string name="subjects_color_pink">Pink</string>
    <string name="subjects_color_purple">Purple</string>
    <string name="subjects_color_blue">Blue</string>
    <string name="subjects_color_teal">Teal</string>
    <string name="subjects_color_green">Green</string>
    <string name="subjects_color_lime">Lime</string>
    <string name="subjects_color_yellow">Yellow</string>
    <string name="subjects_color_orange">Orange</string>
    <string name="subjects_color_brown">Brown</string>


    // Login

    <string name="login_user">Username</string>
    <string name="login_link">Link of your StudOn instance</string>
    <string name="login_password">Password</string>
    <string name="login_automatic_title">Automatic login (IDM)</string>
    <string name="login_text_edit">Please fill in login data</string>
    <string name="login_failed">Login failed!</string>


    // Bookmarks

    <string name="bookmark_remove">Delete</string>
    <string name="bookmark_remove_confirm">Delete Bookmark?</string>
    <string name="bookmark_setFav">Start site</string>
    <string name="bookmark_edit">Edit</string>
    <string name="bookmark_edit_hint">New title…</string>
    <string name="bookmark_saved">Bookmark saved</string>
    <string name="bookmark_saved_not">Bookmark already exists</string>
    <string name="bookmark_icon">Icon</string>

    // Menu Items
    <string name="action_homepage">Homepage</string>
    <string name="action_menu">Menu</string>
    <string name="action_search_prev">Next</string>
    <string name="action_search_next">Previous</string>
    <string name="action_search_cancel">Cancel search</string>

    <string name="menu_bookmarks">Bookmarks</string>

    <string name="menu_share">Share</string>
    <string name="menu_finish">Exit</string>

    <string name="menu_save_bookmark">Save</string>
    <string name="menu_save_pdf">Print</string>

    <string name="menu_more_settings">Settings</string>
    <string name="menu_more_files">Downloads</string>

    <string name="menu_search">Search</string>
    <string name="menu_openInBrowser">Open in Browser</string>


    // Settings

    <string name="settings_security_moodle">Login data (IDM)</string>
    <string name="settings_security_moodle_summary">Enter your IDM login data. It will be filled in automatically. Please delete unused bookmarks after editing your data.</string>

    <string name="settings_license_about_summary">Learn more about the app.</string>

    <string name="settings_security_pin">Pin (App access)</string>
    <string name="settings_security_pin_summary">Set a pin to protect app against unwanted access. Only use numbers.</string>

    // SnackBar

    <string name="toast_yes">OK</string>
    <string name="toast_cancel">Cancel</string>
    <string name="toast_download">Downloading file:</string>
    <string name="toast_download_1">Download:</string>
    <string name="toast_download_2">Download completed. Open file?</string>
    <string name="toast_wrongPW">Wrong password</string>
    <string name="toast_notPrint">No printer found</string>
    <string name="toast_notBack">Cannot go back</string>
    <string name="toast_notForward">Cannot go forward</string>
    <string name="toast_external">External link. Open in default browser?</string>

    // Dialogs

    <string name="dialog_help_title">Help</string>
    <string name="dialog_help_text">
        &lt;b>Bookmarks&lt;/b>&lt;br>
        \u25AA Click to open entry.&lt;br>
        \u25AA Long press to edit entry.&lt;br>
        \u25AA Long press navigation button to open bookmarks.&lt;br>&lt;br>

        &lt;b>Swipe&lt;/b>&lt;br>
        Swipe on the toolbar or navigation button:&lt;br>
        \u25AA left/right to go back/forward in history.&lt;br>
        \u25AA top/bottom to scroll to top/bottom of website.
    </string>

    <string name="dialog_license_title">Copyright © 2022 by ASDOI</string>
    <string name="dialog_license_text">
        Forked from https://github.com/scoute-dich/HHSMoodle&lt;br>
        &lt;i>For more information visit: https://github.com/asdoi/StudOn&lt;/i>&lt;br>&lt;br>

        This program is free software: you can redistribute it and/or modify
        it under the terms of the GNU General Public License as published by
        the Free Software Foundation, either version 3 of the License, or
        (at your option) any later version.

        This program is distributed in the hope that it will be useful,
        but WITHOUT ANY WARRANTY; without even the implied warranty of
        MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
        GNU General Public License for more details.

        You should have received a copy of the GNU General Public License
        along with this program.  If not, see http://www.gnu.org/licenses.&lt;br>&lt;br>

        &lt;i>Following open source libraries or projects are used within this software:&lt;/i>&lt;br>&lt;br>&lt;br>

        &lt;b>Material Design Icons&lt;/b>&lt;br>
        SIL Open Font License, Version 1.1.&lt;br>
        Templarian&lt;br>
        &lt;i>https://github.com/Templarian/MaterialDesign&lt;/i>&lt;br>&lt;br>

        &lt;b>Android CustomTabs&lt;/b>&lt;br>
        Made by Sascha Peilicke&lt;br>
        Apache-2.0 License&lt;br>
        &lt;i>https://github.com/saschpe/android-customtabs&lt;/i>&lt;br>&lt;br>


        &lt;b>AppUpdater&lt;/b>&lt;br>
        Made by Javier Santos&lt;br>
        Apache-2.0 License&lt;br>
        &lt;i>https://github.com/javiersantos/AppUpdater&lt;/i>
    </string>

    <string name="dialog_sortName">Name</string>
    <string name="dialog_sortIcon">Icon</string>
    <string name="dialog_searchHint">Enter search term</string>


    // Password

    <string name="pw_hint">Only numbers</string>
    <string name="pw_forgotten">Pin forgotten?</string>
    <string name="pw_forgotten_dialog">Reset app data?</string>


    <string name="setting_sort">Sorting</string>
    <string name="setting_sort_summary">Sort bookmarks by name or icon.</string>

    <string name="setting_columns">Columns</string>
    <string name="setting_columns_summary">Number of columns in bookmark list and menu.</string>

    <string name="setting_external">External link</string>
    <string name="setting_external_summary">Show a dialog to open external links in default browser.</string>

    <string name="setting_swipe">Swipe gestures</string>
    <string name="setting_swipe_summary">Open the summary-menu on left swipe and the offers-menu on right swipe.</string>

    <string name="setting_nightMode">Dark mode</string>
    <string name="setting_nightMode_summary">Will use the dark mode for displaying websites, if system uses dark mode. This works only, if latest webview is installed on device.</string>

    <string name="dialog_help_summary">Some useful hints for using the app.</string>

    <string name="back_button">Press again to exit</string>
    <string name="authentication_error">Authentication error:</string>
    <string name="authentication_failed">Authentication failed</string>
    <string name="biometric_unlock">Biometric unlock</string>
    <string name="biometric_unlock_description">Unlock the app with your fingerprint or your device credentials.</string>
    <string name="biometric_login_title">Biometric unlock of StudOn app</string>
    <string name="biometric_login_message">Unlock using your biometric credential</string>

    <string name="confirm_download">Confirm Downloads</string>
    <string name="confirm_download_desc">Show a confirmation dialog before starting downloads.</string>

    <string name="update_later">Later</string>
    <string name="update_available_content">Download the latest version with the latest features, improvements, and bug fixes.</string>
    <string name="summary">Summary</string>
    <string name="automatic_updates">Automatic Updates</string>
    <string name="automatic_udpates_desc">Check for an update on every app start</string>

</resources>
